...Wijzigen.cshtml aangepast, 2 redirectjes gefixt, bij lokaal verwijderen werd verkeerde command gegeven (fix)

--- a/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
@@ -40,16 +40,19 @@
 }
 
 @Html.ValidationSummary()
+
+<h2>Decaan verwijderen</h2>
+
 @if (decaan != null)
 {
     <p>
         <span>Gebruiker:</span>
-        <span>@user</span>
+        <span><b>@user</b></span>
     </p>
 
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#verwijderDecaanWarning"><span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder</button>
+    <button type="button" class="btn btn-danger" id="floatRight" data-toggle="modal" data-target="#verwijderWarning"><span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder</button>
 
-    <div id="verwijderDecaanWarning" class="modal fade" role="dialog">
+    <div id="verwijderWarning" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
             <div class="modal-content">
@@ -58,7 +61,7 @@
                     <h4 class="modal-title">Waarschuwing</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Weet je zeker dat je <b>@user</b> wil verwijderen?</p>
+                    <p>Weet je zeker dat je gebruiker <b>@user</b> wilt verwijderen?</p>
                 </div>
                 <div class="modal-footer">
                     <form method="post" class="form-inline">
