--- a/ComeniusCarrousel/Decaan/Klas/KlasWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Klas/KlasWijzigen.cshtml
@@ -18,20 +18,44 @@
     if (IsPost && Request.Form["delete"] != null)
     {
         KlasRepo.DeleteKlas(id);
-        Response.Redirect("~/Decaan/Vak/VakOverzicht");
+        Response.Redirect("~/Decaan/Klas/KlasOverzicht");
     }
 }
 
 @Html.ValidationSummary()
+
+<h2>Klas verwijderen</h2>
+
 @if (klas != null)
 {
     <p>
         <span>Klas:</span>
-        <span>@klas.KlasNaam</span>
+        <span><b>@klas.KlasNaam</b></span>
     </p>
-    <form method="post" class="form-inline">
-        <button type="submit" id="submit" name="delete" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove"></span> Verwijderen
-        </button>
-    </form>
+    
+    <button type="button" class="btn btn-danger" id="floatRight" data-toggle="modal" data-target="#verwijderWarning"><span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder</button>
+
+    <div id="verwijderWarning" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Waarschuwing</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Weet je zeker dat je klas <b>@klas.KlasNaam</b> wilt verwijderen?</p>
+                </div>
+                <div class="modal-footer">
+                    <form method="post" class="form-inline">
+                    <button type="submit" id="submit" name="delete" class="btn btn-danger">
+            <span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijderen
+        </button>       
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Sluiten</button>
+                        </form>
+                </div>
+            </div>
+
+        </div>
+    </div>
 }
