--- a/ComeniusCarrousel/Leerling/_Leerling.cshtml
+++ b/ComeniusCarrousel/Leerling/_Leerling.cshtml
@@ -1,10 +1,14 @@
 ﻿@*Wordt aangeroepen in default*@
 @{
-    
+    int id = User.IsInRole("Leerling") == true ? WebSecurity.CurrentUserId : -1;
+    LeerlingRepo.Leerling leerling = LeerlingRepo.GetLeerling(id);
 }
 
 @RenderPage("~/Leerling/_LeerlingDetails.cshtml")
 
-<a href="~/Leerling/Keuze" class="btn btn-default" role="button" id="floatRight">
-    <span class="glyphicon glyphicon-pencil"></span>&nbsp; Voer keuzevakken in
-</a>
+@if (leerling.Niveau.ToLower() == "havo")
+{
+    <a href="~/Leerling/Keuze" class="btn btn-default" role="button" id="floatRight">
+        <span class="glyphicon glyphicon-pencil"></span>&nbsp; Voer keuzevakken in
+    </a>
+}
