Mail Checkbox Update

--- a/ComeniusCarrousel/Decaan/Mail/MailBevestiging.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailBevestiging.cshtml
@@ -8,12 +8,12 @@
     var debuggingFlag = true;
     try {
         // Initialize WebMail helper
-        WebMail.SmtpServer = "127.0.0.1";
-        WebMail.SmtpPort = 25;
-        WebMail.UserName = "Sev7n";
+        WebMail.SmtpServer = "ex2013.csg-comenius.nl";
+        WebMail.SmtpPort = 578;
+        WebMail.UserName = "profielkeuze@csg-comenius.nl";
         WebMail.EnableSsl = false;
-        WebMail.Password = "David";
-        WebMail.From = "user@domain.com";
+        WebMail.Password = "Blaatschaap10";
+        WebMail.From = "ex2013.csg-comenius.nl";
         /* Commenius Gegevens
             smtp.Host = "ex2013.csg-comenius.nl";
             smtp.Port = 578;
