--- a/ComeniusCarrousel/App_Code/DecaanRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/DecaanRepo.cshtml
@@ -29,4 +29,17 @@
             return null;
         }
     }
+
+    public static void DeleteDecaan(int id, string user)
+    {
+        var userDb = Database.Open(App.AuthDataBase);
+        var roleData = userDb.Query("SELECT RoleName FROM webpages_UsersInRoles INNER JOIN webpages_Roles ON webpages_Roles.RoleId = webpages_UsersInRoles.RoleId WHERE UserId = @0", id);
+        if (roleData != null)
+        {
+            Roles.RemoveUserFromRoles(user, roleData.RoleName); // deletes records from webpages_UsersInRoles table
+        }
+        ((SimpleMembershipProvider)Membership.Provider).DeleteAccount(user); // deletes record from webpages_Membership table
+        ((SimpleMembershipProvider)Membership.Provider).DeleteUser(user, true); // deletes record from UserProfile table
+        userDb.Close();
+    }
 }
