--- a/ComeniusCarrousel/App_Code/LeraarRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeraarRepo.cshtml
@@ -74,10 +74,10 @@
         {
             VoorlichtingRepo.DeleteVoorlichting(row.VoorlichtingId);
         }
-        var userRoles = Roles.GetRolesForUser();
-        if (userRoles.Count() > 0)
+        var roleData = userDb.Query("SELECT RoleName FROM webpages_UsersInRoles INNER JOIN webpages_Roles ON webpages_Roles.RoleId = webpages_UsersInRoles.RoleId WHERE UserId = @0", id);
+        if (roleData != null)
         {
-            Roles.RemoveUserFromRoles(user, userRoles); // deletes records from webpages_UsersInRoles table
+            Roles.RemoveUserFromRoles(user, roleData.RoleName); // deletes records from webpages_UsersInRoles table
         }
         ((SimpleMembershipProvider)Membership.Provider).DeleteAccount(user); // deletes record from webpages_Membership table
         ((SimpleMembershipProvider)Membership.Provider).DeleteUser(user, true); // deletes record from UserProfile table
