--- a/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
@@ -173,10 +173,9 @@
         db.Execute(deleteKeuzeCommand, userId);
         db.Execute(deleteRoosterCommand, userId);
         var userRoles = Roles.GetRolesForUser(user);
-        var roleData = userDb.Query("SELECT RoleName FROM webpages_UsersInRoles INNER JOIN webpages_Roles ON webpages_Roles.RoleId = webpages_UsersInRoles.RoleId WHERE UserId = @0", userId);
-        if (roleData != null)
+        if (userRoles.Count() > 0)
         {
-            Roles.RemoveUserFromRoles(user, roleData.RoleName); // deletes records from webpages_UsersInRoles table
+            Roles.RemoveUserFromRoles(user, userRoles); // deletes records from webpages_UsersInRoles table
         }
         ((SimpleMembershipProvider)Membership.Provider).DeleteAccount(user); // deletes record from webpages_Membership table
         ((SimpleMembershipProvider)Membership.Provider).DeleteUser(user, true); // deletes record from UserProfile table
