part revert DecaanWijzigen

--- a/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
@@ -52,12 +52,12 @@
                     <h4 class="modal-title">Waarschuwing</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Weet je zeker dat je <b>@user</b> wil verwijderen?</p>
+                    <p>Weet je zeker dat je gebruiker <b>@user</b> wilt verwijderen?</p>
                 </div>
                 <div class="modal-footer">
                     <form method="post" class="form-inline">
                     <button type="submit" id="submit" name="delete" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder
+            <span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijderen
         </button>       
                     <button type="button" class="btn btn-default" data-dismiss="modal">Sluiten</button>
                         </form>
