--- a/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
@@ -16,22 +16,33 @@
 
         if(Request.Form["vakNaam"] != null) {vakNaam = Request.Form["vakNaam"];}
         if(Request.Form["niveau"] != null) {niveau = Request.Form["niveau"];}
-    
+
         if(Validation.IsValid())
         {
             VakRepo.MakeVak(vakNaam, niveau);
+            Response.Redirect("~/Decaan/Vak/VakOverzicht");
         }
     }
 }
 
-<form method="post" class="form-inline">
-    @Html.ValidationSummary()
-    <input type="text" name="vakNaam"><br>
-    <select name="niveau" class="form-control">
-        <option value="HAVO">HAVO</option>
-        <option value="VWO">VWO</option>
-    </select><br>
-    <button type="submit" id="submit" name="vakToevoegen" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Toevoegen
-    </button>
-</form>
+<h2>Vak aanmaken</h2>
+
+<div class="col-md-12">
+    <form method="post">
+        @Html.ValidationSummary()
+        <div class="form-group">
+            <label for="vakNaam">Naam vak</label>
+            <input class="form-control" type="text" name="vakNaam">
+        </div>
+        <div class="form-group">
+            <label for="niveau">Niveau</label>
+            <select name="niveau" class="form-control">
+                <option value="HAVO">HAVO</option>
+                <option value="VWO">VWO</option>
+            </select>
+        </div>
+        <button type="submit" id="submit" name="vakToevoegen" class="btn btn-success" style="float: right;">
+            <span class="glyphicon glyphicon-plus"></span>&nbsp; Toevoegen
+        </button>
+    </form>
+</div>
