--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingOverzicht.cshtml
@@ -36,7 +36,7 @@
             <td>@voorlichting.Leraar</td>
             <td>@voorlichting.Niveau</td>
             <td>@string.Format("{0:d/M/yyyy HH:mm}", voorlichting.DateTime)</td>
-            <td><a href="~/Decaan/Voorlichting/VoorlichtingWijzigen?id=@voorlichting.VoorlichtingId">Verwijderen</a></td>
+            <td><a href="~/Decaan/Voorlichting/VoorlichtingWijzigen?id=@voorlichting.VoorlichtingId">Wijzigen</a></td>
         </tr>
     }
     </tbody>
