--- a/ComeniusCarrousel/Leerling/_Leerling.cshtml
+++ b/ComeniusCarrousel/Leerling/_Leerling.cshtml
@@ -12,3 +12,6 @@
         <span class="glyphicon glyphicon-pencil"></span>&nbsp; Voer keuzevakken in
     </a>
 }
+<a href="~/Leerling/EigenRooster" class="btn btn-default" role="button" id="floatLeft">
+    <span class="glyphicon glyphicon-pencil"></span>&nbsp; Rooster
+</a>
