--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -5,11 +5,11 @@
 }
 <h2>Leerlingenoverzicht</h2>
 
-<a class="btn btn-success" href="~/Admin/Leerling/BulkLeerlingenToevoegen">
-    <span class="glyphicon glyphicon-plus"></span>&nbsp; Meerdere leerlingen aanmaken
+<a class="btn btn-success" href="~/Admin/Leerling/LeerlingenToevoegen">
+    <span class="glyphicon glyphicon-plus"></span>&nbsp; Leerlingen aanmaken
 </a>
-<a class="btn btn-success" href="~/Admin/Leerling/LeerlingToevoegen">
-    <span class="glyphicon glyphicon-plus"></span>&nbsp; Nieuwe leerling aanmaken
+<a class="btn btn-success" href="~/Rooster">
+    <span class="glyphicon glyphicon-user"></span>&nbsp; Volledig rooster
 </a>
 </br>
 <div class="input-group" id="floatRight">
