--- a/ComeniusCarrousel/Leraar/_Leraar.cshtml
+++ b/ComeniusCarrousel/Leraar/_Leraar.cshtml
@@ -9,4 +9,7 @@
     LeraarRepo.Leraar leraar = LeraarRepo.GetLeraar(id);
 }
 
-<h3>@leraar.Voornaam @leraar.Achternaam (@leraar.UserName): @leraar.VoorlichtingVak</h3>
+<h3>@leraar.Voornaam @leraar.Achternaam (@leraar.UserName): @leraar.VoorlichtingVak</h3><br>
+<a class="btn btn-success" href="~/Rooster">
+    <span class="glyphicon glyphicon-user"></span>&nbsp; Volledig rooster
+</a>
